...
                    }`}
                >
                    {isSubmitting ? (
                        <Spinner color='white' />
                    ) : (
                        <ButtonText className='text-white font-semibold'>
                            Continue
                        </ButtonText>
                    )}
                </Button>
            </VStack>

            {validationErrors && <FormError>{validationErrors}</FormError>}
...
                        <Text className='text-brand-link text-base font-semibold'>
                            Sending...
                        </Text>
                    </HStack>
                ) : (
                    <LinkButton onPress={handleResendOTP}>
                        Didn't get the code? Try again
                    </LinkButton>
                )}
            </AnimatedVStack>
        </AnimatedVStack>
    );
};
...
