...
            <NativeTabs.Trigger name="tournaments">
                <Label hidden>Tournaments</Label>
                <Icon sf="trophy.fill" />
            </NativeTabs.Trigger>
            <NativeTabs.Trigger name="(profile)">
                <Label hidden>Account</Label>
                <Icon sf="person.fill" />
            </NativeTabs.Trigger>
            <NativeTabs.Trigger name="(search)" role="search">
                <Label hidden>Search</Label>
            </NativeTabs.Trigger>
        </NativeTabs>
    );
...
