...
                    }`}
                >
                    {isSubmitting ? (
                        <Spinner color='white' />
                    ) : (
                        <ButtonText className='text-white font-semibold'>
                            Continue
                        </ButtonText>
                    )}
                </Button>
            </VStack>

            {validationErrors && <FormError>{validationErrors}</FormError>}
...
